--- a/starter/03-CSS-Fundamentals/index.html
+++ b/starter/03-CSS-Fundamentals/index.html
@@ -1,4 +1,12 @@
-  
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>The Basic Language of the Web: HTML</title>
+  </head>
+
+  <body>
     <!--
     <h1>The Basic Language of the Web: HTML</h1>
     <h2>The Basic Language of the Web: HTML</h2>
