--- a/starter/04-CSS-Layouts/css-grid.html
+++ b/starter/04-CSS-Layouts/css-grid.html
@@ -14,7 +14,7 @@
       }
       .el--3 {
         background-color: green;
-        height: 150px;
+        /* height: 150px; */
       }
       .el--4 {
         background-color: goldenrod;
@@ -36,23 +36,61 @@
         /* STARTER */
         font-family: sans-serif;
         background-color: #ddd;
-        font-size: 40px;
+        font-size: 30px;
         margin: 40px;
 
         /* CSS GRID */
+        display: grid;
+        /* grid-template-columns: 1fr 1fr 1fr auto; */
+        grid-template-columns: repeat(4, 1fr);
+
+        grid-template-rows: 1fr auto;
+        height: 400px;
+        /* grid-template-rows: 1fr 200px; */
+        /* gap: 30px; */
+        column-gap: 10px;
+        row-gap: 40px;
+
+        display: none;
+      }
+
+      .el--8 {
+        /* grid-column: 2/3;
+        grid-row: 1/2; */
+      }
+
+      .el--2 {
+        /* grid-column: 1/2;
+        grid-row: 2/3; */
       }
 
       .container--2 {
         /* STARTER */
+
+        /* display: none; */
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
-        margin: 100px;
+        margin: 40px;
 
-        width: 1000px;
+        width: 700px;
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 135px 200px 125px;
+        grid-template-rows: 250px 100px;
+        gap: 50px;
+
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        justify-items: center;
+      }
+
+      .el--3 {
+        align-self: end;
+        justify-self: end;
       }
     </style>
   </head>
