--- a/starter/04-CSS-Layouts/css-grid.html
+++ b/starter/04-CSS-Layouts/css-grid.html
@@ -89,8 +89,18 @@
       }
 
       .el--3 {
-        align-self: end;
+        align-self: start;
         justify-self: end;
+      }
+
+      .el--1 {
+        align-self: end;
+        justify-self: start;
+      }
+
+      .el--4 {
+        align-self: center;
+        justify-items: center;
       }
     </style>
   </head>
