--- a/starter/07-Omnifood-Desktop/index.html
+++ b/starter/07-Omnifood-Desktop/index.html
@@ -530,9 +530,40 @@
       </section>
 
       <section class="section-cta">
-        <div class="container cta">
-          <div class="cta-text-box">CTA</div>
-          <div class="cta-img-box">Image</div>
+        <div class="container">
+          <div class="cta">
+            <div class="cta-text-box">
+              <h2 class="heading-secondary">
+                We offer a free sample meal
+              </h2>
+              <p class="cta-text">
+                Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!
+              </p>
+              <form action="#" class="cta-form">
+                <div>
+                <label for="full-name">Full Name</label>
+                <input id="full-name" type="text" placeholder="John Smith" required/>
+              </div>
+              <div>
+                <label for="email">Email</label>
+                <input id="email" class="email" placeholder="example@email.com" required/>
+              </div>
+              <div>
+                <label for="select-where">Where dis you hear from us?</label>
+                <select id="select-where" required>
+                  <option valie="">Please choose one option:</option>
+                  <option value="friends">Friends and Family</option>
+                  <option value="youtube">Youtube video</option>
+                  <option value="instagram">Instagram Reel</option>
+                  <option value="facebok">Facebook Ads</option>
+                </select>
+              </div>
+                <button class="btn btn--form">Sign up now</button>
+              </form>
+            </div>
+            <div class="cta-img-box role="img" aria-label="Woman enjouing the food">
+            </div>
+          </div>
         </div>
       </section>
     </main>
