--- a/starter/07-Omnifood-Desktop/index.html
+++ b/starter/07-Omnifood-Desktop/index.html
@@ -27,7 +27,9 @@
   </head>
   <body>
     <header class="header">
-      <img class="logo" src="img/omnifood-logo.png" alt="Omnifood logo" />
+      <a href="#">
+        <img class="logo" src="img/omnifood-logo.png" alt="Omnifood logo" />
+      </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#" alt="">Section 1</a></li>
@@ -533,39 +535,126 @@
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
-              <h2 class="heading-secondary">
-                We offer a free sample meal
-              </h2>
+              <h2 class="heading-secondary">We offer a free sample meal</h2>
               <p class="cta-text">
-                Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!
+                Healthy, tasty and hassle-free meals are waiting for you. Start
+                eating well today. You can cancel or pause anytime. And the
+                first meal is on us!
               </p>
               <form action="#" class="cta-form">
                 <div>
-                <label for="full-name">Full Name</label>
-                <input id="full-name" type="text" placeholder="John Smith" required/>
-              </div>
-              <div>
-                <label for="email">Email</label>
-                <input id="email" class="email" placeholder="example@email.com" required/>
-              </div>
-              <div>
-                <label for="select-where">Where dis you hear from us?</label>
-                <select id="select-where" required>
-                  <option valie="">Please choose one option:</option>
-                  <option value="friends">Friends and Family</option>
-                  <option value="youtube">Youtube video</option>
-                  <option value="instagram">Instagram Reel</option>
-                  <option value="facebok">Facebook Ads</option>
-                </select>
-              </div>
+                  <label for="full-name">Full Name</label>
+                  <input
+                    id="full-name"
+                    type="text"
+                    placeholder="John Smith"
+                    required
+                  />
+                </div>
+                <div>
+                  <label for="email">Email</label>
+                  <input
+                    id="email"
+                    class="email"
+                    placeholder="example@email.com"
+                    required
+                  />
+                </div>
+                <div>
+                  <label for="select-where">Where dis you hear from us?</label>
+                  <select id="select-where" required>
+                    <option valie="">Please choose one option:</option>
+                    <option value="friends">Friends and Family</option>
+                    <option value="youtube">Youtube video</option>
+                    <option value="instagram">Instagram Reel</option>
+                    <option value="facebok">Facebook Ads</option>
+                  </select>
+                </div>
                 <button class="btn btn--form">Sign up now</button>
               </form>
             </div>
-            <div class="cta-img-box role="img" aria-label="Woman enjouing the food">
-            </div>
+            <div class="cta-img-box role="img" aria-label="Woman enjouing the
+            food"/>
           </div>
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="container grid grid--footer">
+        <div class="logo-col">
+          <a href="#" class="footer-logo">
+            <img class="logo" src="img/omnifood-logo.png" alt="Omnifood logo" />
+          </a>
+
+          <ul class="social-links">
+            <li>
+              <a href="#" class="footer-link"
+                ><ion-icon name="logo-instagram" class="social-icon"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="footer-link"
+                ><ion-icon name="logo-facebook" class="social-icon"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a href="#" class="footer-link"></a
+              ><ion-icon name="logo-twitter" class="social-icon"></ion-icon>
+            </li>
+          </ul>
+
+          <p class="copyright">
+            Copiright &copy 2027 by Omnifood, Inc. All rights reserved.
+          </p>
+        </div>
+        <div class="address-col">
+          <p class="footer-heading">Cosntac us</p>
+          <address class="contacts">
+            <p class="address">
+              623 Harrison St., 2nd Floor, San Francisco, CA 94107
+            </p>
+            <p>
+              <a href="tel:415-201-6370" class="footer-link">415-201-6370</a>
+              <br />
+              <a href="mailto:hello@omnifood.com" class="footer-link">
+                hello@omnifood.com</a
+              >
+            </p>
+          </address>
+        </div>
+        <nav class="nav-col">
+          <p class="footer-heading">Account</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Create account</a></li>
+            <li><a class="footer-link" href="#">Sign in</a></li>
+            <li><a class="footer-link" href="#">iOS app</a></li>
+            <li><a class="footer-link" href="#">Android app</a></li>
+          </ul>
+        </nav>
+        <nav class="nav-col">
+          <p class="footer-heading">Company</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">About Omnifood</a></li>
+            <li><a class="footer-link" href="#">For Bussiness</a></li>
+            <li><a class="footer-link" href="#">Cooking Partners</a></li>
+            <li><a class="footer-link" href="#">Carrers</a></li>
+          </ul>
+        </nav>
+        <nav class="nav-col">
+          <p class="footer-heading">Resources</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Recipe Directory</a></li>
+            <li><a class="footer-link" href="#">Help center</a></li>
+            <li><a class="footer-link" href="#">Privacy & terms</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <!--
+
+Social profiles: instagram, facebook, twitter [links to them not available yet]
+-->
+    </footer>
   </body>
 </html>
