--- a/starter/07-Omnifood-Desktop/index.html
+++ b/starter/07-Omnifood-Desktop/index.html
@@ -32,12 +32,12 @@
       </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#" alt="">Section 1</a></li>
-          <li><a class="main-nav-link" href="#" alt="">Section 2</a></li>
-          <li><a class="main-nav-link" href="#" alt="">Section 3</a></li>
-          <li><a class="main-nav-link" href="#" alt="">Section 4</a></li>
+          <li><a class="main-nav-link" href="#" alt="">How it works</a></li>
+          <li><a class="main-nav-link" href="#" alt="">Meals</a></li>
+          <li><a class="main-nav-link" href="#" alt="">Testimonials</a></li>
+          <li><a class="main-nav-link" href="#" alt="">Pricing</a></li>
           <li>
-            <a class="main-nav-link nav-cta" href="#" alt="">Section 5</a>
+            <a class="main-nav-link nav-cta" href="#" alt="">Try for free</a>
           </li>
         </ul>
       </nav>
