--- a/starter/07-Omnifood-Desktop/index.html
+++ b/starter/07-Omnifood-Desktop/index.html
@@ -31,6 +31,7 @@
       <a href="#">
         <img class="logo" src="img/omnifood-logo.png" alt="Omnifood logo" />
       </a>
+
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#" alt="">How it works</a></li>
@@ -42,6 +43,11 @@
           </li>
         </ul>
       </nav>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
     </header>
     <main>
       <section class="section-hero">
@@ -564,7 +570,7 @@
                 <div>
                   <label for="select-where">Where dis you hear from us?</label>
                   <select id="select-where" required>
-                    <option valie="">Please choose one option:</option>
+                    <option valie="">Please choose one option</option>
                     <option value="friends">Friends and Family</option>
                     <option value="youtube">Youtube video</option>
                     <option value="instagram">Instagram Reel</option>
@@ -610,7 +616,7 @@
           </p>
         </div>
         <div class="address-col">
-          <p class="footer-heading">Cosntac us</p>
+          <p class="footer-heading">Contact us</p>
           <address class="contacts">
             <p class="address">
               623 Harrison St., 2nd Floor, San Francisco, CA 94107
