added scroll, added -webkit, added favicons, optimized images, added meta information

--- a/starter/07-Omnifood-Desktop/index.html
+++ b/starter/07-Omnifood-Desktop/index.html
@@ -3,20 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal tastes and nutritional needs."
+    />
+
+    <!-- Always include this line of code!!! -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" href="img/favicon.png" />
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/queries.css" />
 
-    <title>Omnifood</title>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"
@@ -25,6 +32,13 @@
       nomodule=""
       src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
     ></script>
+
+    <script
+      defer
+      src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
+    ></script>
+    <script defer src="js/script.js"></script>
+    <title>Omnifood &mdash; Never cook again!</title>
   </head>
   <body>
     <header class="header">
@@ -34,13 +48,13 @@
 
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#" alt="">How it works</a></li>
-          <li><a class="main-nav-link" href="#" alt="">Meals</a></li>
-          <li><a class="main-nav-link" href="#" alt="">Testimonials</a></li>
-          <li><a class="main-nav-link" href="#" alt="">Pricing</a></li>
+          <li><a class="main-nav-link" href="#how">How it works</a></li>
+          <li><a class="main-nav-link" href="#meals">Meals</a></li>
           <li>
-            <a class="main-nav-link nav-cta" href="#" alt="">Try for free</a>
+            <a class="main-nav-link" href="#testimonials">Testimonials</a>
           </li>
+          <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
+          <li><a class="main-nav-link nav-cta" href="#cta">Try for free</a></li>
         </ul>
       </nav>
 
@@ -49,6 +63,7 @@
         <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
       </button>
     </header>
+
     <main>
       <section class="section-hero">
         <div class="hero">
@@ -61,7 +76,7 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="btn btn--full margin-right-sm"
+            <a href="#cta" class="btn btn--full margin-right-sm"
               >Start eating well</a
             >
             <a href="#" class="btn btn--outline">Learn more &rarr;</a>
@@ -81,11 +96,16 @@
             </div>
           </div>
           <div class="hero-img-box">
-            <img
-              src="img/hero.png"
-              class="hero-img"
-              alt="Woman enjoying food, meals in storage container, and food bowls on a table"
-            />
+            <picture>
+              <source srcset="img/hero.webp" type="image/webp" />
+              <source srcset="img/hero-min.png" type="image/png" />
+
+              <img
+                src="img/hero-min.png"
+                class="hero-img"
+                alt="Woman enjoying food, meals in storage container, and food bowls on a table"
+              />
+            </picture>
           </div>
         </div>
       </section>
@@ -103,7 +123,7 @@
         </div>
       </section>
 
-      <section class="section-how">
+      <section class="section-how" id="how">
         <div class="container">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">
@@ -174,7 +194,7 @@
         </div>
       </section>
 
-      <section class="section-meal">
+      <section class="section-meals" id="meals">
         <div class="container center-text">
           <span class="subheading"> Meals </span>
           <h2 class="heading-secondary">
@@ -189,7 +209,6 @@
               class="meal-img"
               alt="Japonese Gyozas"
             />
-
             <div class="meal-content">
               <div class="meal-tags">
                 <span class="tag tag--vegetarian">Vegetarian</span>
@@ -214,13 +233,13 @@
               </ul>
             </div>
           </div>
+
           <div class="meal">
             <img
               src="img/meals/meal-2.jpg"
               class="meal-img"
-              alt="Japonese Gyozas"
+              alt="Avocado Salads"
             />
-
             <div class="meal-content">
               <div class="meal-tags">
                 <span class="tag tag--vegan">Vegan</span>
@@ -269,11 +288,10 @@
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
 
-                <span>Lactose</span>-free
+                <span>Lactose-free</span>-free
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-
                 <span>Keto</span>
               </li>
               <li class="list-item">
@@ -282,11 +300,11 @@
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span>Low</span> FODMAP
+                <span>Low FODMAP</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span>Kid</span>-friendly
+                <span>Kid-friendly</span>
               </li>
             </ul>
           </div>
@@ -297,7 +315,7 @@
         </div>
       </section>
 
-      <section class="section-testimonials">
+      <section class="section-testimonials" id="testimonials">
         <div class="testimonials-container">
           <span class="subheading">Testimonials</span>
           <h2 class="heading-secondary">Once you try it, you won't go back</h2>
@@ -317,8 +335,8 @@
             <figure class="testimonial">
               <img
                 class="testimonial-img"
-                src="img/customers/ben.jpg"
                 alt="Photo of customer Dave Bryson"
+                src="img/customers/ben.jpg"
               />
               <blockquote class="testimonial-text">
                 The AI algorithm is crazy good, it chooses the right meals for
@@ -429,7 +447,7 @@
         </div>
       </section>
 
-      <section class="section-pricing">
+      <section class="section-pricing" id="pricing">
         <div class="container">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondary">
@@ -538,7 +556,7 @@
         </div>
       </section>
 
-      <section class="section-cta">
+      <section class="section-cta" id="cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
@@ -548,13 +566,14 @@
                 eating well today. You can cancel or pause anytime. And the
                 first meal is on us!
               </p>
-              <form action="#" class="cta-form">
+              <form class="cta-form" name="sign-up" netlify>
                 <div>
                   <label for="full-name">Full Name</label>
                   <input
                     id="full-name"
                     type="text"
                     placeholder="John Smith"
+                    name="full-name"
                     required
                   />
                 </div>
@@ -562,19 +581,21 @@
                   <label for="email">Email</label>
                   <input
                     id="email"
-                    class="email"
-                    placeholder="example@email.com"
+                    type="email"
+                    placeholder="me@example.com"
+                    name="email"
                     required
                   />
                 </div>
                 <div>
                   <label for="select-where">Where dis you hear from us?</label>
-                  <select id="select-where" required>
-                    <option valie="">Please choose one option</option>
-                    <option value="friends">Friends and Family</option>
-                    <option value="youtube">Youtube video</option>
-                    <option value="instagram">Instagram Reel</option>
-                    <option value="facebok">Facebook Ads</option>
+                  <select id="select-where" name="select-where" required>
+                    <option value="">Please choose one option:</option>
+                    <option value="friends">Friends and family</option>
+                    <option value="youtube">YouTube video</option>
+                    <option value="podcast">Podcast</option>
+                    <option value="ad">Facebook ad</option>
+                    <option value="others">Others</option>
                   </select>
                 </div>
                 <button class="btn btn--form">Sign up now</button>
@@ -612,7 +633,8 @@
           </ul>
 
           <p class="copyright">
-            Copiright &copy 2027 by Omnifood, Inc. All rights reserved.
+            Copiright &copy <span class="year">2027</span> by Omnifood, Inc. All
+            rights reserved.
           </p>
         </div>
         <div class="address-col">
@@ -630,6 +652,7 @@
             </p>
           </address>
         </div>
+
         <nav class="nav-col">
           <p class="footer-heading">Account</p>
           <ul class="footer-nav">
@@ -639,6 +662,7 @@
             <li><a class="footer-link" href="#">Android app</a></li>
           </ul>
         </nav>
+
         <nav class="nav-col">
           <p class="footer-heading">Company</p>
           <ul class="footer-nav">
@@ -648,6 +672,7 @@
             <li><a class="footer-link" href="#">Carrers</a></li>
           </ul>
         </nav>
+
         <nav class="nav-col">
           <p class="footer-heading">Resources</p>
           <ul class="footer-nav">
@@ -657,11 +682,6 @@
           </ul>
         </nav>
       </div>
-
-      <!--
-
-Social profiles: instagram, facebook, twitter [links to them not available yet]
--->
     </footer>
   </body>
 </html>
