--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
         The smart 365-days-per-year food subscription that will make you eat
         healthy again. Tailored to your personal tastes and nutritional needs.
       </p>
-      <a href="/starter/07-Omnifood-Desktop/index.html" class="btn btn--full"
-        >Omnifood</a
-      >
+      <a href="/omnifood/index.html" class="btn btn--full">Omnifood</a>
     </section>
   </body>
 </html>
