added storye section completed

--- a/adancedCSS/Natours/starter/index.html
+++ b/adancedCSS/Natours/starter/index.html
@@ -237,6 +237,74 @@
           <a href="#" class="btn btn--green">Discovery all tours</a>
         </div>
       </section>
+
+      <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser not supported!
+          </video>
+        </div>
+
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person ina a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Mary Smith</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatem necessitatibus esse, tempora natus libero, sed hic
+                suscipit quo voluptates neque, commodi eos perspiciatis. Tempora
+                natus libero, sed hic suscipit quo voluptates neque, commodi eos
+                perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Libero dolores repellat temporibus ad ducimus, possimus.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person ina a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Without words to describe.
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatem necessitatibus esse, tempora natus libero, sed hic
+                suscipit quo voluptates neque, commodi eos perspiciatis. Tempora
+                natus libero, sed hic suscipit quo voluptates neque, commodi eos
+                perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Libero dolores repellat temporibus ad ducimus, possimus.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+      </section>
     </main>
 
     <!-- <section class="grid-test">
