added pop 1 part 1

--- a/adancedCSS/Natours/starter/index.html
+++ b/adancedCSS/Natours/starter/index.html
@@ -447,6 +447,40 @@
       </div>
     </footer>
 
+    <div class="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="person in a bot" class="popup__img" />
+
+          <img src="img/nat-9.jpg" alt="person in a rock" class="popup__img" />
+        </div>
+
+        <div class="popup__right">
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important - please reade the terms and conditions first
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+            nihil rerum accusamus aspernatur beatae eum quis sunt temporibus
+            repudiandae dolores reiciendis quo iure illo hic quos consequuntur,
+            iusto quisquam earum. Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Magni autem consequatur dolor eaque. Asperiores id
+            quam assumenda doloremque et doloribus modi possimus provident
+            ratione odio? Deleniti accusamus eaque aliquid reprehenderit. Magni
+            autem consequatur dolor eaque. Asperiores id quam assumenda
+            doloremque et doloribus modi possimus provident ratione odio?
+            Deleniti accusamus eaque aliquid reprehenderit. Magni autem
+            consequatur dolor eaque.
+          </p>
+
+          <a href="#" class="btn btn--green">book now</a>
+        </div>
+      </div>
+    </div>
+
     <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
