--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         healthy again. Tailored to your personal tastes and nutritional needs.
       </p>
       <a href="/omnifood/index.html" class="btn btn--full">Omnifood</a>
+      <a href="/adancedCSS/Natours/starter/index.html" class="btn btn--full"
+        >Nature</a
+      >
     </section>
   </body>
 </html>
