add new nav side with animations

--- a/adancedCSS/Trillo/starter/index.html
+++ b/adancedCSS/Trillo/starter/index.html
@@ -55,7 +55,44 @@
         </nav>
       </header>
       <div class="content">
-        <nav class="sidebar">sidebar</nav>
+        <nav class="sidebar">
+          <ul class="side-nav">
+            <li class="side-nav__item side-nav__item--active">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-home"></use>
+                  <span class="side-nav__title">Hotel</span>
+                </svg>
+              </a>
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
+                  <span class="side-nav__title">Flight</span>
+                </svg>
+              </a>
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-key"></use>
+                  <span class="side-nav__title">Car rental</span>
+                </svg>
+              </a>
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-map"></use>
+                  <span class="side-nav__title">Tours</span>
+                </svg>
+              </a>
+            </li>
+          </ul>
+
+          <div class="legal">&copy; 2022 by trillio. All right reserved.</div>
+        </nav>
         <main class="hotel-view">hotel view</main>
       </div>
     </div>
