add Trillio project to index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <a href="/adancedCSS/Natours/starter/index.html" class="btn btn--full"
         >Nature</a
       >
+      <a href="/adancedCSS/Trillo/starter/index.html" class="btn btn--full"
+        >Trillio</a
+      >
     </section>
   </body>
 </html>
