--- a/adancedCSS/Nexter/starter/index.html
+++ b/adancedCSS/Nexter/starter/index.html
@@ -15,11 +15,14 @@
     <title>Nexter &mdash; your home, your freedom</title>
   </head>
   <body class="container">
+    <!-- Sidebar -->
     <div class="sidebar">Sidebar</div>
 
     <header class="header">Header</header>
-
+    <!-- Realtors Section -->
     <div class="realtors">realtors</div>
+
+    <!-- Features Section -->
     <section class="features">
       <div class="feature">
         <svg class="feature__icon">
@@ -82,6 +85,8 @@
         </p>
       </div>
     </section>
+
+    <!-- Story Pictures -->
     <div class="story__pictures">
       <img
         src="img/story-1.jpeg"
@@ -90,6 +95,8 @@
       />
       <img src="img/story-2.jpeg" class="story__img--2" alt="New house" />
     </div>
+
+    <!-- Story content -->
     <div class="story__content">
       <h3 class="heading-3 mb-sm">Happy Costumers</h3>
       <h2 class="heading-2 heading-2--dark mb-md">
@@ -103,6 +110,7 @@
       <button class="btn">Find your own home</button>
     </div>
 
+    <!-- Homes Section -->
     <section class="homes">
       <div class="home">
         <img src="img/house-1.jpeg" alt="House 1" class="home__img" />
@@ -302,7 +310,74 @@
         <button class="btn home__btn">Contact realtor</button>
       </div>
     </section>
-    <section class="gallery">Gallery</section>
+
+    <!-- Gallery Section -->
+    <section class="gallery">
+      <figure class="gallery__item gallery__item--1">
+        <img src="img/gal-1.jpeg" alt="Gallery image 1" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--2">
+        <img src="img/gal-2.jpeg" alt="Gallery image 2" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--3">
+        <img src="img/gal-3.jpeg" alt="Gallery image 3" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--4">
+        <img src="img/gal-4.jpeg" alt="Gallery image 4" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--5">
+        <img src="img/gal-5.jpeg" alt="Gallery image 5" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--6">
+        <img src="img/gal-6.jpeg" alt="Gallery image 6" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--7">
+        <img src="img/gal-7.jpeg" alt="Gallery image 7" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--8">
+        <img src="img/gal-8.jpeg" alt="Gallery image 8" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--9">
+        <img src="img/gal-9.jpeg" alt="Gallery image 9" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--10">
+        <img
+          src="img/gal-10.jpeg"
+          alt="Gallery image 10"
+          class="gallery__img"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--11">
+        <img
+          src="img/gal-11.jpeg"
+          alt="Gallery image 11"
+          class="gallery__img"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--12">
+        <img
+          src="img/gal-12.jpeg"
+          alt="Gallery image 12"
+          class="gallery__img"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--13">
+        <img
+          src="img/gal-13.jpeg"
+          alt="Gallery image 13"
+          class="gallery__img"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--14">
+        <img
+          src="img/gal-14.jpeg"
+          alt="Gallery image 14"
+          class="gallery__img"
+        />
+      </figure>
+    </section>
+
+    <!-- Footer-->
     <footer class="footer">Footer</footer>
   </body>
 </html>
