--- a/adancedCSS/Nexter/starter/index.html
+++ b/adancedCSS/Nexter/starter/index.html
@@ -16,7 +16,9 @@
   </head>
   <body class="container">
     <!-- Sidebar -->
-    <div class="sidebar">Sidebar</div>
+    <div class="sidebar">
+      <button class="nav-btn"></button>
+    </div>
 
     <header class="header">Header</header>
     <!-- Realtors Section -->
@@ -378,6 +380,32 @@
     </section>
 
     <!-- Footer-->
-    <footer class="footer">Footer</footer>
+    <footer class="footer">
+      <ul class="nav">
+        <li class="nav__item">
+          <a href="#" class="nav__link">Find your dream home</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Request proposal</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Download home planner</a>
+        </li>
+
+        <li class="nav__item">
+          <a href="#" class="nav__link">Contact us</a>
+        </li>
+
+        <li class="nav__item">
+          <a href="#" class="nav__link">Submit your property</a>
+        </li>
+
+        <li class="nav__item">
+          <a href="#" class="nav__link">Come work with us</a>
+        </li>
+      </ul>
+
+      <p class="copyright">© Copyright 2017 by Jonas.</p>
+    </footer>
   </body>
 </html>
