--- a/adancedCSS/Nexter/starter/index.html
+++ b/adancedCSS/Nexter/starter/index.html
@@ -20,7 +20,19 @@
       <button class="nav-btn"></button>
     </div>
 
-    <header class="header">Header</header>
+    <header class="header">
+      <img src="img/logo.png" alt="logo" class="header__logo" alt="logo" />
+      <h3 class="heading-3">Your own home:</h3>
+      <h1 class="heading-1">The ultimate personal freedom</h1>
+      <button class="btn header__btn">View our properties</button>
+      <div class="header__seenon-text">See on</div>
+      <div class="header__seenon-logos">
+        <img src="img/logo-bbc.png" alt="BBC logo" />
+        <img src="img/logo-forbes.png" alt="Forbes logo" />
+        <img src="img/logo-techcrunch.png" alt="Tech logo" />
+        <img src="img/logo-bi.png" alt="Bussiness Insider logo" />
+      </div>
+    </header>
     <!-- Realtors Section -->
     <div class="realtors">realtors</div>
 
