added new card menu of nexter project

--- a/index.html
+++ b/index.html
@@ -90,6 +90,30 @@
               >
             </div>
           </div>
+
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--4"></div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--4">
+                  Nexter</span
+                >
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>Full Grid template</li>
+                  <li>Up to 30 people</li>
+                  <li>2 tours guides</li>
+                  <li>Sleep in cozy hotels</li>
+                </ul>
+              </div>
+              <a
+                href="/adancedCSS/Nexter/starter/index.html"
+                class="btn btn--dark-blue"
+                >Access it!</a
+              >
+            </div>
+          </div>
         </div>
       </section>
     </main>
