fix info of projects

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
               </h4>
               <div class="card__details">
                 <ul>
-                  <li>3 day tours</li>
-                  <li>Up to 30 people</li>
-                  <li>2 tours guides</li>
-                  <li>Sleep in cozy hotels</li>
+                  <li>Trillio</li>
+                  <li>Only Flexbox</li>
+                  <li>Animations</li>
+                  <li>Advanced CSS</li>
                 </ul>
               </div>
               <a
                 href="/adancedCSS/Trillo/starter/index.html"
                 class="btn btn--pink"
-                >Access it!</a
+                >Access it</a
               >
             </div>
           </div>
@@ -55,16 +55,16 @@
               </h4>
               <div class="card__details">
                 <ul>
-                  <li>3 day tours</li>
-                  <li>Up to 30 people</li>
-                  <li>2 tours guides</li>
-                  <li>Sleep in cozy hotels</li>
+                  <li>Natours</li>
+                  <li>Float</li>
+                  <li>Deep classes</li>
+                  <li>Advanced CSS</li>
                 </ul>
               </div>
               <a
                 href="/adancedCSS/Natours/starter/index.html"
                 class="btn btn--green"
-                >Access it!</a
+                >Access it</a
               >
             </div>
           </div>
@@ -79,15 +79,13 @@
               </h4>
               <div class="card__details">
                 <ul>
-                  <li>3 day tours</li>
-                  <li>Up to 30 people</li>
-                  <li>2 tours guides</li>
-                  <li>Sleep in cozy hotels</li>
+                  <li>Omnifood</li>
+                  <li>Grid and Flexbox</li>
+                  <li>Media queries</li>
+                  <li>Medium</li>
                 </ul>
               </div>
-              <a href="/omnifood/index.html" class="btn btn--blue"
-                >Access it!</a
-              >
+              <a href="/omnifood/index.html" class="btn btn--blue">Access it</a>
             </div>
           </div>
 
@@ -101,16 +99,16 @@
               </h4>
               <div class="card__details">
                 <ul>
-                  <li>Full Grid template</li>
-                  <li>Up to 30 people</li>
-                  <li>2 tours guides</li>
-                  <li>Sleep in cozy hotels</li>
+                  <li>Full Grid</li>
+                  <li>Grid adjustable</li>
+                  <li>Supports</li>
+                  <li>Advanced CSS</li>
                 </ul>
               </div>
               <a
                 href="/adancedCSS/Nexter/starter/index.html"
                 class="btn btn--dark-blue"
-                >Access it!</a
+                >Access it</a
               >
             </div>
           </div>
@@ -126,13 +124,13 @@
               <div class="card__details">
                 <ul>
                   <li>Flex grid 12</li>
-                  <li>Up to 30 people</li>
-                  <li>2 tours guides</li>
-                  <li>Sleep in cozy hotels</li>
+                  <li>Responsive</li>
+                  <li>Modular</li>
+                  <li>Medium CSS</li>
                 </ul>
               </div>
               <a href="/dashboard/index.html" class="btn btn--light-blue"
-                >Access it!</a
+                >Access it</a
               >
             </div>
           </div>
@@ -148,14 +146,12 @@
               <div class="card__details">
                 <ul>
                   <li>Nike Card</li>
-                  <li>Up to 30 people</li>
-                  <li>2 tours guides</li>
+                  <li>Animations</li>
+                  <li>Absolute and Relative</li>
                   <li>Sleep in cozy hotels</li>
                 </ul>
               </div>
-              <a href="/nike/index.html" class="btn btn--gradient"
-                >Access it!</a
-              >
+              <a href="/nike/index.html" class="btn btn--gradient">Access it</a>
             </div>
           </div>
         </div>
