fix info of cards

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               </h4>
               <div class="card__details">
                 <ul>
-                  <li>Trillio</li>
+                  <li>Hotel Booking</li>
                   <li>Only Flexbox</li>
                   <li>Animations</li>
                   <li>Advanced CSS</li>
@@ -55,7 +55,7 @@
               </h4>
               <div class="card__details">
                 <ul>
-                  <li>Natours</li>
+                  <li>Natures Tours</li>
                   <li>Float</li>
                   <li>Deep classes</li>
                   <li>Advanced CSS</li>
@@ -79,7 +79,7 @@
               </h4>
               <div class="card__details">
                 <ul>
-                  <li>Omnifood</li>
+                  <li>Food Start up</li>
                   <li>Grid and Flexbox</li>
                   <li>Media queries</li>
                   <li>Medium</li>
@@ -99,9 +99,9 @@
               </h4>
               <div class="card__details">
                 <ul>
+                  <li>Realtors</li>
                   <li>Full Grid</li>
                   <li>Grid adjustable</li>
-                  <li>Supports</li>
                   <li>Advanced CSS</li>
                 </ul>
               </div>
@@ -123,9 +123,9 @@
               </h4>
               <div class="card__details">
                 <ul>
+                  <li>Dashboard Layout</li>
                   <li>Flex grid 12</li>
                   <li>Responsive</li>
-                  <li>Modular</li>
                   <li>Medium CSS</li>
                 </ul>
               </div>
