--- a/index.html
+++ b/index.html
@@ -154,6 +154,28 @@
               <a href="/nike/index.html" class="btn btn--gradient">Access it</a>
             </div>
           </div>
+
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--7"></div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--7">
+                  Anime JS DOM</span
+                >
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>HTML elements</li>
+                  <li>DOM</li>
+                  <li>Javascript</li>
+                  <li>No frameworks</li>
+                </ul>
+              </div>
+              <a href="/animeJS/index.html" class="btn btn--gradient"
+                >Access it</a
+              >
+            </div>
+          </div>
         </div>
       </section>
     </main>
