--- a/index.html
+++ b/index.html
@@ -175,6 +175,56 @@
                 >Access it</a
               >
             </div>
+
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--7"></div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--7">
+                    TODAY I LEARN</span
+                  >
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>REACT</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </div>
+                <a
+                  href="https://todayilearn.marcorodrigues.site
+                "
+                  class="btn btn--gradient"
+                  >Access it</a
+                >
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--7"></div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--7">
+                    STORE</span
+                  >
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>REACT</li>
+                    <li>TYPESCRIPT</li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </div>
+                <a
+                  href="https://marcorodrigues.site
+                "
+                  class="btn btn--gradient"
+                  >Access it</a
+                >
+              </div>
+            </div>
           </div>
         </div>
       </section>
