--- a/index.html
+++ b/index.html
@@ -175,55 +175,27 @@
                 >Access it</a
               >
             </div>
+          </div>
 
-            <div class="card">
-              <div class="card__side card__side--front">
-                <div class="card__picture card__picture--7"></div>
-                <h4 class="card__heading">
-                  <span class="card__heading-span card__heading-span--7">
-                    TODAY I LEARN</span
-                  >
-                </h4>
-                <div class="card__details">
-                  <ul>
-                    <li>REACT</li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-                <a
-                  href="https://todayilearn.marcorodrigues.site
-                "
-                  class="btn btn--gradient"
-                  >Access it</a
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--7"></div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--7">
+                  Anime JS DOM</span
                 >
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>HTML elements</li>
+                  <li>DOM</li>
+                  <li>Javascript</li>
+                  <li>No frameworks</li>
+                </ul>
               </div>
-            </div>
-
-            <div class="card">
-              <div class="card__side card__side--front">
-                <div class="card__picture card__picture--7"></div>
-                <h4 class="card__heading">
-                  <span class="card__heading-span card__heading-span--7">
-                    STORE</span
-                  >
-                </h4>
-                <div class="card__details">
-                  <ul>
-                    <li>REACT</li>
-                    <li>TYPESCRIPT</li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-                <a
-                  href="https://marcorodrigues.site
-                "
-                  class="btn btn--gradient"
-                  >Access it</a
-                >
-              </div>
+              <a href="/animeJS/index.html" class="btn btn--gradient"
+                >Access it</a
+              >
             </div>
           </div>
         </div>
