--- a/index.html
+++ b/index.html
@@ -182,18 +182,42 @@
               <div class="card__picture card__picture--7"></div>
               <h4 class="card__heading">
                 <span class="card__heading-span card__heading-span--7">
-                  Anime JS DOM</span
+                  TODAY I LEARN</span
                 >
               </h4>
               <div class="card__details">
                 <ul>
-                  <li>HTML elements</li>
-                  <li>DOM</li>
+                  <li>REACT</li>
+                  <li>SUPABASE</li>
                   <li>Javascript</li>
                   <li>No frameworks</li>
                 </ul>
               </div>
-              <a href="/animeJS/index.html" class="btn btn--gradient"
+              <a href="https://marcorodrigues.site" class="btn btn--gradient"
+                >Access it</a
+              >
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--7"></div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--7">
+                  STORE REACT</span
+                >
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>REACT</li>
+                  <li>TYPESCRIPT</li>
+                  <li></li>
+                  <li></li>
+                </ul>
+              </div>
+              <a
+                href="https://todailearn.marcorodrigues.site"
+                class="btn btn--gradient"
                 >Access it</a
               >
             </div>
