--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@
                   <li>No frameworks</li>
                 </ul>
               </div>
-              <a href="https://marcorodrigues.site" class="btn btn--gradient"
+              <a
+                href="https://todayilearn.marcorodrigues.site"
+                class="btn btn--gradient"
                 >Access it</a
               >
             </div>
@@ -215,9 +217,7 @@
                   <li></li>
                 </ul>
               </div>
-              <a
-                href="https://todailearn.marcorodrigues.site"
-                class="btn btn--gradient"
+              <a href="https://marcorodrigues.site" class="btn btn--gradient"
                 >Access it</a
               >
             </div>
