teste to ghpages

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
                   <li>Medium</li>
                 </ul>
               </div>
-              <a href="/omnifood/index.html" class="btn btn--blue">Access it</a>
+              <a href="/CSS3/omnifood/index.html" class="btn btn--blue"
+                >Access it</a
+              >
             </div>
           </div>
 
@@ -106,7 +108,7 @@
                 </ul>
               </div>
               <a
-                href="/adancedCSS/Nexter/starter/index.html"
+                href="/CSS3/adancedCSS/Nexter/starter/index.html"
                 class="btn btn--dark-blue"
                 >Access it</a
               >
@@ -129,7 +131,7 @@
                   <li>Medium CSS</li>
                 </ul>
               </div>
-              <a href="/dashboard/index.html" class="btn btn--light-blue"
+              <a href="/CSS3/dashboard/index.html" class="btn btn--light-blue"
                 >Access it</a
               >
             </div>
